--- a/src/app/jobs/search-job/search-job.component.html
+++ b/src/app/jobs/search-job/search-job.component.html
@@ -15,12 +15,14 @@
           {{ col }}
         </th>
       </tr>
-      <tr *ngFor="let job of jobs; let i = index">
+      <tr *ngFor="let job of searchedJobs; let i = index">
         <td>{{ job.partId }}</td>
         <td>{{ job.jobName }}</td>
         <td>{{ job.userId }}</td>
         <td>{{ job.qty }}</td>
       </tr>
     </table>
+    <p class="job-card" *ngIf="searchedJobs.length == 0 && message == ''">Job Not Found</p>
+    <p class="job-card" *ngIf="message != ''">{{ message }}</p>
   </div>
 </div>
